--- a/device.template
+++ b/device.template
@@ -2,9 +2,7 @@
 # title: {{ device_name }}{{ page_title_marker}}
 # label: auto-generated
 <h2>{{device_name}} ({{device_class}})</h2>
-<pre>
-{{device_class_doc | e}}
-</pre>
+{{ device_class_doc }}
 <p>
   <ac:structured-macro ac:name="include" ac:schema-version="1">
     <ac:parameter ac:name="">
