--- a/device.template
+++ b/device.template
@@ -12,6 +12,9 @@
   </ac:structured-macro>
 </p>
 <h2>Happi Information</h2>
+
+This information is stored in the happi database.  It is used to create this Python device.
+
     <table>
         <thead>
             <tr>
@@ -33,6 +36,10 @@
 
 {% if relevant_pvs_by_kind %}
   <h2>Relevant PVs</h2>
+
+  These PVs are used by the device.  PVs may be recorded in the EPICS Archive Appliance.
+  Click any PV to see its history according to the archiver.
+
   <table>
     <thead>
         <tr>
@@ -62,3 +69,18 @@
     </tbody>
   </table>
 {% endif %}
+
+<h2>How do I change this?</h2>
+
+<p>While this page is not intended to be modified, the notes page is free for you to edit and add notes about {{ device_name }}. Those notes will be automatically included in the device information page.</p>
+<p>If you have something to add of use to others regarding this device, please edit
+  <ac:link>
+    <ri:page ri:content-title="{{ page_title_prefix }}{{ device_name }}{{ user_page_suffix }}"/>
+    <ac:plain-text-link-body><![CDATA[this page]]></ac:plain-text-link-body>
+  </ac:link>
+  .
+</p>
+<p>
+  If you find an issue with the data in the happi database, please contact your POC
+  or reach out to #pcds-help on Slack.
+</p>
