--- a/device.template
+++ b/device.template
@@ -70,6 +70,21 @@ This information is stored in the happi database.  It is used to create this Pyt
   </table>
 {% endif %}
 
+<h2>Jira</h2>
+
+The following Jira tickets may be relevant for {{ device_name }}:
+
+<p>
+  <ac:structured-macro ac:name="jira" ac:schema-version="1">
+    <ac:parameter ac:name="server">SLAC National Accelerator Laboratory</ac:parameter>
+    <ac:parameter ac:name="columnIds">issuekey,summary,issuetype,created,updated,duedate,assignee,reporter,priority,status,resolution</ac:parameter>
+    <ac:parameter ac:name="columns">key,summary,type,created,updated,due,assignee,reporter,priority,status,resolution</ac:parameter>
+    <ac:parameter ac:name="maximumIssues">20</ac:parameter>
+    <ac:parameter ac:name="jqlQuery">summary ~ "{{ device_name }}" OR description ~ "{{ device_name }}" OR summary ~ "{{ device_class }}" OR description ~ "{{ device_class }}" </ac:parameter>
+    <ac:parameter ac:name="serverId">1b8dc293-975d-3f2d-b988-18fd9aec1546</ac:parameter>
+  </ac:structured-macro>
+</p>
+
 <h2>How do I change this?</h2>
 
 <p>While this page is not intended to be modified, the notes page is free for you to edit and add notes about {{ device_name }}. Those notes will be automatically included in the device information page.</p>
