--- a/device.template
+++ b/device.template
@@ -1,6 +1,21 @@
 # title: {{ device_name }}
 # title: {{ device_name }}{{ page_title_marker}}
 # label: auto-generated
+<ac:structured-macro ac:name="html" ac:schema-version="1">
+  <ac:plain-text-body><![CDATA[<!--
+
+** WAIT! **
+
+Please don't edit this page. This page is auto-generated and may be frequently
+overwritten - your changes will NOT persist.
+
+The Notes page linked below is your spot for notes about this device.
+
+** WAIT! **
+
+-->]]></ac:plain-text-body>
+</ac:structured-macro>
+
 {{ device_class_doc }}
 <p>
   <ac:structured-macro ac:name="include" ac:schema-version="1">
@@ -11,6 +26,15 @@
     </ac:parameter>
   </ac:structured-macro>
 </p>
+
+<h2>API Documentation</h2>
+
+<p>Additional usage information about this device may be available on the
+  <a href="https://pcdshub.github.io/pcdsdevices/master/search.html?q={{device_class}}" target="_blank">
+    pcdsdevices documentation site.
+  </a>
+</p>
+
 <h2>Happi Information</h2>
 
 This information is stored in the happi database.  It is used to create this Python device.
@@ -87,7 +111,12 @@ The following Jira tickets may be relevant for {{ device_name }}:
 
 <h2>How do I change this?</h2>
 
-<p>While this page is not intended to be modified, the notes page is free for you to edit and add notes about {{ device_name }}. Those notes will be automatically included in the device information page.</p>
+<p>
+  This page is not intended to be modified and may be overwritten without notice.
+  However, the notes page is free for you to edit and add notes about {{ device_name }}.
+  Those notes will be automatically included in the device information page.
+</p>
+
 <p>If you have something to add of use to others regarding this device, please edit
   <ac:link>
     <ri:page ri:content-title="{{ page_title_prefix }}{{ device_name }}{{ user_page_suffix }}"/>
