--- a/all_devices.template
+++ b/all_devices.template
@@ -51,7 +51,6 @@ Make notes on each device in its corresponding "Notes" section.
             <tr>
                 <th>Name</th>
                 <th>Class</th>
-                <th>Notes</th>
                 <th>Z</th>
             </tr>
         </thead>
@@ -66,15 +65,8 @@ Make notes on each device in its corresponding "Notes" section.
             </td>
             <td>
     {% if "class.template" in info %}
-              <ac:link>
-                <ri:page ri:content-title="{{ info["class.template"]["title"] }} "/>
-              </ac:link>
+              {{ info["class.template"]["title"] }}
     {% endif %}
-            </td>
-            <td>
-              <ac:link>
-                <ri:page ri:content-title="{{ info["user.template"]["title"] }} "/>
-              </ac:link>
             </td>
             <td>
                 {{ info.happi_item.z }}
