--- a/class.template
+++ b/class.template
@@ -2,20 +2,12 @@
 # title: {{ device_class }}{{ page_title_marker }}
 # label: auto-generated
 
-<ac:structured-macro ac:name="info" ac:schema-version="1">
-  <ac:parameter ac:name="title">What is this?</ac:parameter>
-  <ac:rich-text-body>
-    <p>This page lists all happi database items of the same Python class <code>{{device_class}}</code>.</p>
-    <p>If you wish to add notes about a specific device, please edit its corresponding "<code>- Notes</code>" page.</p>
-    <p>Additional usage information about this class may be available on the
-      <a href="https://pcdshub.github.io/pcdsdevices/master/search.html?q={{device_class}}" target="_blank">
-        pcdsdevices documentation site.
-      </a>
-    </p>
-  </ac:rich-text-body>
-</ac:structured-macro>
+<h4>All {{device_class}} devices</h4>
 
-<h2>{{device_class}}</h2>
+See also the
+<a href="https://pcdshub.github.io/pcdsdevices/master/search.html?q={{device_class}}" target="_blank">
+  pcdsdevices documentation
+</a>.
 
 <p>
   <ac:structured-macro ac:name="children" ac:schema-version="2">
@@ -23,3 +15,9 @@
     <ac:parameter ac:name="sort">title</ac:parameter>
   </ac:structured-macro>
 </p>
+
+<h4>My notes about {{device_class}}</h4>
+
+<i>
+  This is a spot for you to put notes about {{ device_class }}.
+</i>
