MNT: further reduce generating pages unnecessarily

--- a/device.template
+++ b/device.template
@@ -104,8 +104,8 @@ This information is stored in the happi database.  It is used to create this Pyt
 {% for key, value in happi_item.items() %}
     {% if key not in ("_whatrecord", ) and value %}
             <tr>
-                <td>{{ key | e }}</td>
-                <td>{{ value | e | replace("&#39;", "'") }}</td>
+                <td>{{ key | confluence_escape }}</td>
+                <td>{{ value | confluence_escape }}</td>
             </tr>
     {% endif %}
 {% endfor %}
